# vqimg

./: CMakeLists.txt  README.md  package.xml
cfg/: gngt.cfg  hue.cfg
launch/: webcam-demo.launch
msg/: component_center.msg  component_centers.msg
params/: webcam-demo-gngt.yaml  webcam-demo-hue.yaml  webcam-demo.yaml
src/: gngt_node.cpp  hue_filter_node.cpp
